--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilos globales */
+
 
 body {
     font-family: Arial, sans-serif;
@@ -14,12 +14,11 @@ body {
     padding: 20px;
 }
 
-/* Estilos para el encabezado (h1 y h2) */
 
-/* Estilos para el encabezado (h1 y h2) */
+
 h1 {
     font-size: 36px;
-    color: #fff; /* Cambia el color a blanco */
+    color: #fff; 
     text-align: center;
     padding: 20px;
     background-color: #1e90ff;
@@ -27,13 +26,13 @@ h1 {
 
 h2 {
     font-size: 24px;
-    color: #fff; /* Cambia el color a blanco */
+    color: #fff; 
     text-align: center;
     margin: 20px 0;
 }
 
 
-/* Estilos para el párrafo de introducción */
+
 
 p.text {
     font-size: 18px;
@@ -42,7 +41,7 @@ p.text {
     line-height: 1.6;
 }
 
-/* Estilos para las secciones */
+
 
 section {
     background-color: #fff;
@@ -52,7 +51,7 @@ section {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos para los títulos de sección (h3 y h4) */
+
 
 h3#3 {
     font-size: 24px;
@@ -65,7 +64,7 @@ h4 {
     margin: 10px 0;
 }
 
-/* Estilos para las imágenes */
+
 
 img {
     max-width: 100%;
@@ -74,7 +73,7 @@ img {
     margin: 20px auto;
 }
 
-/* Estilos para los íconos de habilidades */
+
 
 #icon-container {
     display: flex;
@@ -86,6 +85,58 @@ img {
 #icon-container p {
     margin: 10px;
     text-align: center;
+}
+
+section[title="CONTACT ME"] {
+    text-align: center;
+    background-color: #f0f0f0;
+    padding: 20px;
+}
+
+
+section[title="CONTACT ME"] h3 {
+    font-size: 24px;
+    color: #333;
+}
+
+
+section[title="CONTACT ME"] form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+
+section[title="CONTACT ME"] label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #555;
+}
+
+section[title="CONTACT ME"] input[type="text"],
+section[title="CONTACT ME"] input[type="email"],
+section[title="CONTACT ME"] textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+
+section[title="CONTACT ME"] input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+section[title="CONTACT ME"] input[type="submit"]:hover {
+    background-color: #0056b3;
 }
 
 
